# py-gtk

./: .coveragerc  .gitignore  404.html  LICENSE  README-pt_BR.md  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml
.github/workflows/: gh-pages.yml
docs/: install-blueprint-markup-language-pt_BR.md  install-blueprint-markup-language.en.md  install-blueprint-markup-language.pt-BR.md  install-gtk-chromeos.en.md  install-gtk-chromeos.pt-BR.md  install-gtk-linux-en.md  install-gtk-linux-pt_BR.md  install-gtk-linux.en.md  install-gtk-macos-en.md  install-gtk-macos-pt_BR.md  install-gtk-macos.en.md  install-gtk-macos.pt-BR.md  install-gtk-windows-en.md  install-gtk-windows-pt_BR.md  install-gtk-windows-wsl2-en.md  install-gtk-windows-wsl2-pt_BR.md  install-gtk-windows.pt-BR.md  setup-blueprint-gnome-builder-pt_BR.md  setup-blueprint-gnome-builder.en.md
install-blueprint-markup-language/: index.html
install-gtk-chromeos/: index.html
install-gtk-linux/: index.html
install-gtk-macos/: index.html
install-gtk-windows/: index.html
install-gtk-windows-wsl2/: index.html
pt-BR/: index.html
pt-BR/install-blueprint-markup-language/: index.html
pt-BR/install-gtk-chromeos/: index.html
pt-BR/install-gtk-linux/: index.html
pt-BR/install-gtk-macos/: index.html
pt-BR/install-gtk-windows/: index.html
pt-BR/install-gtk-windows-wsl2/: index.html
pt-BR/setup-blueprint-gnome-builder/: index.html
search/: search_index.json
setup-blueprint-gnome-builder/: index.html
tests/: MainWindow.py  conftest.py  test_main_window.py
(+283 files in other folders)
