[project]
name = "py-gtk"
version = "0.1.0"
description = "Creating graphical interfaces with Python (PyGObject) and GTK"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pygobject>=3.54.5",
]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.16.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.pdm.scripts]
format = {composite = [
    "ruff check .",
    "ruff format .",
]}

[tool.ruff]
fix = true
line-length = 79
extend-exclude = ["docs", ".venv"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT", "UP", "E501"]
