[project]
name = "py-gtk"
version = "0.1.0"
description = "Creating graphical interfaces with Python (PyGObject) and GTK"
authors = [
    {name = "Renato Cruz", email = "natorsc@gmail.com"},
]
dependencies = ["pygobject>=3.54.5"]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pygobject-stubs>=2.16.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
