[project]
name = "py-gtk"
version = "0.1.0"
description = "Creating graphical interfaces with Python (PyGObject) and GTK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygobject>=3.56.3"
]

[dependency-groups]
dev = [
    "PyGObject-stubs>=2.17.0"
]
docs = [
    "ghp-import>=2.1.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
]
